# heos

./: .gitignore  LICENSE  readme.md  setup.cfg
src/heos/: __init__.py  cli.py  client.py  player.py  registry.py  ssdp.py
src/heos/cli/: __init__.py  group.py  main.py  player.py  registry.py
